--- a/microservice-auth/src/main/resources/application.properties
+++ b/microservice-auth/src/main/resources/application.properties
@@ -10,11 +10,8 @@ spring.datasource.tomcat.testWhileIdle = true
 spring.datasource.tomcat.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.tomcat.validationQuery = SELECT 1
 
-client.id = "api-client";
-#"api-secret" bycrypted
-client.secret = "$2y$12$FXsdHXIqzzL62QcEom69A.jiSubCDed2qLWtnvE7c3KMHtSqFHD1a";
-#client.secret = "api-secret"; 
-#b4877887-bc0f-4254-ab33-7aecf227c174
+client.id = ABC
+client.secret = sec1
 
 logging.level.root= WARN
 logging.level.org.springframework.web= INFO
