--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	
 
 	<modules>
+		<module>microservice-apigateway</module>
 		<module>microservice-auth</module>
 		<module>microservice-registration</module>
 		<module>microservice-greeting</module>
